[package]
name = "stakker_tui"
version = "0.0.4"
authors = ["Jim Peters <jim@uazu.net>"]
edition = "2018"

description = "ANSI terminal handling for Stakker"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/uazu/stakker_tui"
documentation = "https://docs.rs/stakker_tui"

keywords = [ "stakker", "tui", "ansi", "terminal", "console" ]
categories = [ "command-line-interface" ]

[dependencies]
stakker = { version = "0.2", path = "../stakker" }
stakker_mio = { version = "0.2", path = "../stakker_mio" }
signal-hook = "0.1"
libc = "0.2"
errno = "0.2"

[features]
default = []

# Enable this to build unstable features which are not yet finalized
unstable = []
